@@ -610,7 +610,7 @@ enum {
 {
 	GLubyte		_displayedOpacity, _realOpacity;
 	ccColor3B	_displayedColor, _realColor;
-	BOOL		_cascadeColor, _cascadeOpacity;
+	BOOL		_cascadeColorEnabled, _cascadeOpacityEnabled;
 }
 
 // XXX To make BridgeSupport happy
